index.css
body{
    background-color: burlywood;
}
.container {
    background-color: white;
    width: 400px;
    margin: 200px auto;
    border: 5px solid #b74343;
    padding: 20px;
    box-sizing: border-box;
}

h1 {
    text-align: center;
}

h1 span {
    border-bottom: 8px solid #57c4d0;
    margin-bottom: 5px; /* Adjusted spacing between heading and border */
}

.main-body {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 20px 0;
}

.task-body {
    width: 100%;
    margin: 20px 0;
}

li { 
    display: flex;
    align-items: center;
    list-style: none;
}

input {
    padding: 10px;
    border: 2px solid;
    margin-right: 10px; /* Adjusted spacing between input and button */
}

.btn {
    padding: 10px 15px;
}

#task-holder {
    list-style: none;
    margin: 0;
    padding: 0;
}


#text-holder {
    margin-bottom: 0; /* Removed the margin-bottom to align the checkbox just under the textarea */
}

